// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches default snap 1`] = `
<div
  class="Card"
>
  test default button
</div>
`;

exports[`matches default snap outlined 1`] = `
<div
  class="Card Card--outlined"
>
  test default button
</div>
`;
